[package]
name = "server"
version = "0.1.0"
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
zmq = {version = "0.9", features=["vendored"]}
clap = "*"
serde = { version = "1.0", features = ["derive"] }
rmp-serde = "1.1.1"
simple_logger = "1.11.0"
log = "*"
crossbeam = "0.8.0"
signal-hook = "0.3.8"